调整了字段名称

--- a/项目规划.md
+++ b/项目规划.md
@@ -5,10 +5,9 @@
 ### 基础能力
 基于系统现有架构和核心功能，优先扩展以下功能，以增强系统的实用性和开发体验：
 
-#### 全新开发的管理后台
+#### 全新重构的管理后台
 - 提供直观的系统配置、内容管理和用户管理等功能
 - 降低系统使用门槛，提升用户体验，使非技术用户也能轻松管理内容
-- 使用开源项目[Art Design Pro](https://www.artd.pro/docs/zh/)做后台管理ui框架
 
 #### 开发与调试工具
 - 提供开发调试工具，简化开发过程
