新增状态管理

--- a/config/i18n/ja-jp.json
+++ b/config/i18n/ja-jp.json
@@ -17,6 +17,7 @@
 	"该邮箱已经注册！": "そのメールアドレスはすでに登録済みです！",
 	"该手机号已经注册！": "該当する携帯電話番号は既に登録されています！",
 	"该帐号已经注册！": "該当するアカウントは既に登録されています！",
+	"账号已被冻结，请联系管理员！": "アカウントは凍結されています。管理者にお問い合わせください！",
 	"无权限！": "パーミッションなし！",
 	"创建成功！": "作成成功！",
 	"更新成功！": "更新成功！",
