--- a/config/i18n/en-us.json
+++ b/config/i18n/en-us.json
@@ -35,6 +35,7 @@
     "请提交帐号（或邮箱和手机号）！": "Please submit account (or email and mobile)!",
     "请提交密码！": "Please submit password!",
     "帐号或密码解密失败！": "Account or password decryption failed!",
+    "账号已被冻结，请联系管理员！": "Account has been frozen, please contact the administrator!",
     "该帐号未设置密码，请切换登录方式！": "This account has not set a password, please switch to login!",
     "密码错误！": "Password error!",
     "账户不存在！": "Account does not exist!",
