新增阿里云号码认证-短信认证接口，此接口无需企业认证，无需申请资质、模板、签名，个人企业均可即可使用

--- a/项目规划.md
+++ b/项目规划.md
@@ -1,11 +1,25 @@
 ## 未来规划
-完全的前后端分离，后端仅配套管理后台
-可实现多类型站点，企业官网、论坛社区、博客等
+同时兼顾服务端渲染（SSR） 和完全前后端分离的架构模式
+
+核心思路：路由分层 + 渲染策略适配
+核心是通过路由规则区分场景，对需要 SSR 的页面（如营销页、首屏优化页）走服务端渲染逻辑，对前后端分离的接口 / 管理端走纯 API 逻辑，整体架构如下：
+┌──────────────────────────┐
+│ Gin 主引擎                │
+├──────────────────────────┤
+│ 路由分层                  │
+│ ├─ SSR 路由组：/web/*     │ 👉 服务端渲染（模板+数据）
+│ ├─ API 路由组：/api/*     │ 👉 前后端分离（JSON 接口）
+│ └─ 静态资源路由：/public/* │ 👉 静态文件（前端资源）
+└──────────────────────────┘
+
+安全模块：提供用户认证、授权、用户管理等功能。
+主题模块：提供主题管理、模板渲染、主题配置等功能。
+内置内容管理模块：提供文章、分类、标签、评论、附件、页面、菜单、设置等功能。
 
 ### 基础能力
 基于系统现有架构和核心功能，优先扩展以下功能，以增强系统的实用性和开发体验：
 
-#### 全新重构的管理后台
+#### 全新重构的服务端渲染管理后台
 - 提供直观的系统配置、内容管理和用户管理等功能
 - 降低系统使用门槛，提升用户体验，使非技术用户也能轻松管理内容
 
