--- a/项目规划.md
+++ b/项目规划.md
@@ -3,6 +3,6 @@
 主题模块：提供主题管理、模板渲染、主题配置等功能。
 内置内容管理模块：提供文章、分类、标签、评论、附件、页面、菜单、设置等功能。
 
-安全防护：
+## 安全防护：
 新增 XSS 过滤（评论 / 文章内容）、CSRF 令牌、接口限流（基于 IP/Uid），扩展utils封装安全校验函数；
 对敏感操作（如主题升级、删除文章）增加二次确认 + 操作日志（新增OperationLog模型）。
