--- a/项目规划.md
+++ b/项目规划.md
@@ -1,7 +1,9 @@
 ## 未来规划
+服务端渲染管理后台，前后端分离管理后台
 安全模块：提供用户认证、授权、用户管理等功能。
 主题模块：提供主题管理、模板渲染、主题配置等功能。
 内置内容管理模块：提供文章、分类、标签、评论、附件、页面、菜单、设置等功能。
+实时数据同步： 基于 WebSocket 和 SSE 实现实时订阅，客户端可监听特定记录或全集合变更（如新增、更新、删除）。
 
 ## 安全防护：
 新增 XSS 过滤（评论 / 文章内容）、CSRF 令牌、接口限流（基于 IP/Uid），扩展utils封装安全校验函数；
