新增评论速率限制，最大字数限制，评论必须包含中文，敏感词过滤设置，优化了搜索接口的独立页面搜索参数

--- a/项目规划.md
+++ b/项目规划.md
@@ -1,10 +1,18 @@
 ## 未来规划
 服务端渲染管理后台，前后端分离管理后台
 安全模块：提供用户认证、授权、用户管理等功能。
-主题模块：提供主题管理、模板渲染、主题配置等功能。
 内置内容管理模块：提供文章、分类、标签、评论、附件、页面、菜单、设置等功能。
 实时数据同步： 基于 WebSocket 和 SSE 实现实时订阅，客户端可监听特定记录或全集合变更（如新增、更新、删除）。
+搜索：提供全局搜索功能，支持模糊查询、分页、排序等功能，同样的还支持高级筛选功能。
+访客评论功能，以适配普通博客
 
 ## 安全防护：
 新增 XSS 过滤（评论 / 文章内容）、CSRF 令牌、接口限流（基于 IP/Uid），扩展utils封装安全校验函数；
 对敏感操作（如主题升级、删除文章）增加二次确认 + 操作日志（新增OperationLog模型）。
+
+
+## 重构
+用户活跃度排行：提供用户活跃度排行功能，支持按时间维度（如周榜、月榜、总榜）进行筛选。
+用户评论度排行：提供用户评论度排行功能，支持按时间维度（如周榜、月榜、总榜）进行筛选。
+用户点赞度排行：提供用户点赞度排行功能，支持按时间维度（如周榜、月榜、总榜）进行筛选。
+用户访问度排行：提供用户访问度排行功能，支持按时间维度（如周榜、月榜、总榜）进行筛选。
