--- a/项目规划.md
+++ b/项目规划.md
@@ -10,9 +10,113 @@
 新增 XSS 过滤（评论 / 文章内容）、CSRF 令牌、接口限流（基于 IP/Uid），扩展utils封装安全校验函数；
 对敏感操作（如主题升级、删除文章）增加二次确认 + 操作日志（新增OperationLog模型）。
 
+真正的无头模式，前后端的彻底分离：您可以将后端 WP 放到国外，前端放到国内。或者前端直接托管到国外的免费平台，也可以一个 WP 后端对应N个前端，做到前端域名不同、内容不同、风格不同、但是账户通用。想象一下，你有N个不同风格的独立站卖不同的东西，但是只需要在一个 WP 中管理，是不是很省心？
+
+多平台适配：瓜奇实际上是一个单页应用，也就是和 APP 同一套运行机制。当你直接把瓜奇打包到 APP 里面的时候，体验和真正的 APP 是一样的，当然因为接口都是现成的，您也可以自己使用其他框架来实现 APP 或者 小程序。用户可以将您的PC端和手机的 APP 都下载下来，变成一个真正的全平台应用。
+
+不同风格： 您可以为您的PC、移动端、平板端设置不同的UI，是真正不同的UI，而不是简单的自适应。甚至您可以单独为PC、平板、PC端打造各自的专属的内容。
+
+可视化搭建：构建器目前还是初始版本，后续会增加很多惊奇的功能，比如一件换装，上传分享自己的搭配、分享自己的组件等等。您也可以二开自己的组件，并且在构建器上与其他组件搭配，玩出千万种变化。
+
+极度的安全性：您可以完全隐藏您的 WP 后台站点，只对自己的 Node 站点开放端口即可，而且这个端口通过 Node 转发，浏览器上根本看不到！如果前后端在同一台服务器，甚至只给WP绑定一个内网IP即可，这样可以一次性解决所有的 WP 安全问题。
+
+极致的速度：您或许感受到了，瓜奇打开的速度是200毫秒级，我们将页面缓存在 Node 端，Node 自有的高性能和高并发优势得以体现，用户在打开页面的时候，直接从Node缓存中读取资源，不必再走 WP 臃肿的执行流程。WP 服务器的负载也极大降低，同时减少各种宕机风险，这在生产环境下极为重要！
+
+CDN：我们的B2主题真正实现了登录用户与非登录用户完全CDN，已经6年多了，目前还没有多少同类产品。瓜奇更进一步不仅可以CDN，还可以搭配CDN接口对特定页面进行刷新！（目前未实装）
+
+紧跟潮流：在目前的 AI 大环境下，使用传统的 WordPress 主题越来越不能满足需求。你要在传统WP站点中集成一个AI相关的功能要费老鼻子的劲，还不一定能成，但是在 Node 环境下，这些功能可能只需要一行命令。现阶段每天都有N种 AI 应用出现，如果您的新项目不和 AI 结合，注定是要落后一大步的。
+
+与AI的深度结合：在瓜奇中，您可以设置自己的模型接口，用来与AI深度结合，目前我们已经做好了AI批量文章生成，您最少只需要一个标题，就可以生成N篇高质量文章，文章自动做好分类、标签、SEO、多语言、模拟用户评论等工作。后续会推出文章润色、自动补全、AI客服、AI产品推荐等功能。我们没有像其他平台那样限制模型接口收过路费，您可以使用自己的模型！
+
+真正的多语言：瓜奇集成了真正的多语言功能，是那种最标准的多语言形式，不是什么滥竽充数的在线翻译，您可以自由定制任何语言的页面，给他们设置不同的内容和价格。并且速度极快！如果用 WP 的 WPML 插件来实现多语言，慢的会让你怀疑人生，而且这个插件每年最少400块！瓜奇的多语言形式和速度在这个地球上也是别无二家！
+
+真正的多货币：您可以添加N种不同货币，并且选择他们对应的支付方式，这意味着您的产品可以卖到全球的任何地方，只要快递能到达。传统 WP 主题中使用 WOO 和 其他支付插件来实现，速度也是慢的让人崩溃，如果搭配出瓜奇这种多语言多货币的形式，最少一年要花小一千！还可能有各种兼容问题！
+
+真正的SEO与GEO：SEO 未死，GEO 是未来。我们为 SEO 量身定制了专属的多语言 Sitemap.xml 文件、结构化的数据（application/ld+json），专属的 SEO 标题、关键词、描述设置，AI可以帮您辅助完成这些 SEO 设置。更重要的是，我们已经完全兼容了 GEO(AEO) 的场景，让大模型能更好收录和展示您的结构化内容，比如用户在大模型中提问某个产品，如果您有符合的，将会自动在大模型中展示。为了做到这样的效果，我们为每个页面生成了专属的结构化数据 和 markdown 文件，全站生成了大模型专属的 llms.txt 文件。在你的同行还不知道什么是 GEO 的时候，您已经实装了，大模型可以在第一时间理解您的内容和产品，以后您最多的流量可能不是来自搜索引擎，而是来自 OpenAi 或者 Deepseek！
 
 ## 重构
 用户活跃度排行：提供用户活跃度排行功能，支持按时间维度（如周榜、月榜、总榜）进行筛选。
 用户评论度排行：提供用户评论度排行功能，支持按时间维度（如周榜、月榜、总榜）进行筛选。
 用户点赞度排行：提供用户点赞度排行功能，支持按时间维度（如周榜、月榜、总榜）进行筛选。
 用户访问度排行：提供用户访问度排行功能，支持按时间维度（如周榜、月榜、总榜）进行筛选。
+
+
+从现有代码实现来看，当前的 Socket 模块仅完成了**基础的 WebSocket 连接建立、单播/广播消息转发的核心骨架**，但针对「前端实时聊天」的业务场景，**并不完善**，无法直接满足生产环境的聊天功能需求。
+
+以下是详细的分析：
+
+## 一、现有 Socket 已实现的能力
+1. **基础连接能力**
+   - 基于 Gorilla WebSocket 实现了 WebSocket 连接升级，生成随机客户端 ID 标识连接；
+   - 实现了心跳机制（Ping/Pong），维持连接存活，设置了读写超时时间；
+   - 核心的 `hub` 管理器支持客户端注册、注销，以及单播（指定 ID）、广播（所有客户端）消息转发；
+   - 基础的消息解析：校验 JSON 格式，区分单播/广播类型。
+
+2. **基础工程化结构**
+   - 基于 Gin 框架封装了 Socket 路由，分层（route/middleware/controller）设计；
+   - 简单的错误捕获（如连接断开、非 WebSocket 请求）。
+
+## 二、缺失的核心能力（无法满足实时聊天需求）
+### 1. 业务层核心缺失
+| 缺失能力                | 影响                                                                 |
+|-------------------------|----------------------------------------------------------------------|
+| 用户身份关联            | 客户端 ID 是随机 UUID，未绑定系统用户 ID，无法对应「用户」维度的聊天  |
+| 消息持久化              | 消息仅内存转发，服务重启/客户端断开后聊天记录丢失                     |
+| 离线消息支持            | 用户离线时的消息无法暂存，上线后无法接收                             |
+| 消息确认（ACK）         | 发送方无法确认接收方是否成功收到消息                                 |
+| 房间/群聊机制           | 仅支持「广播所有」「单播单个 ID」，无按群/房间分组聊天的能力          |
+| 聊天记录查询            | 无消息存储，无法实现历史聊天记录拉取                                 |
+| 富媒体消息支持          | 仅支持 JSON 文本消息，无图片/文件/语音等富媒体消息处理               |
+
+### 2. 稳定性与安全性缺失
+| 缺失能力                | 影响                                                                 |
+|-------------------------|----------------------------------------------------------------------|
+| 连接鉴权                | 无 Token/用户权限验证，任何客户端都能连接，易伪造消息/恶意攻击       |
+| 连接数/消息限流         | 无连接数限制、消息频率限制，易被恶意连接打满资源/高频消息引发 DoS     |
+| 错误处理不完善          | 无效 JSON 仅打印日志，未反馈给客户端；无重试/降级/熔断逻辑            |
+| 僵尸连接检测            | 无机制检测异常空闲连接，长期占用资源                                 |
+| 跨域配置不严谨          | `CheckOrigin` 直接返回 true，生产环境易引发跨域安全风险              |
+| 长消息处理              | `maxMessageSize=512` 字节，超过直接截断，无法处理长文本消息          |
+| 优雅关闭机制            | 服务停止时无法主动通知客户端断开，易引发客户端异常                   |
+
+### 3. 代码实现细节问题
+- `Index.Read` 方法中注释了 `connect` 映射，路由直接绑定 `Connect`，代码冗余；
+- `hub.run()` 中每次处理消息后遍历打印所有客户端，高并发下有性能损耗；
+- `send` 通道大小固定 256，无动态调整，高消息量时易阻塞；
+- 日志仅简单打印，无结构化日志、连接数/消息量监控，排查问题困难；
+- 无重连机制，客户端断开后需手动重新连接。
+
+## 三、总结
+当前 Socket 模块仅能满足「基础的实时消息转发」（如纯技术验证场景），但对于「前端实时聊天」的业务场景：
+- ✅ 具备基础的 WebSocket 通信能力；
+- ❌ 缺失用户关联、消息持久化、离线消息、鉴权、群聊等核心业务能力；
+- ❌ 稳定性、安全性、可维护性不足，无法直接用于生产环境。
+
+## 四、建议的优化方向
+1. **业务层完善**
+   - 增加用户鉴权：连接时校验 Token，绑定用户 ID 与客户端 ID；
+   - 消息持久化：将聊天消息存入数据库（如 MySQL + Redis），支持历史记录查询；
+   - 离线消息：Redis 暂存离线消息，用户上线后推送；
+   - 房间机制：扩展 `hub` 支持房间分组，实现群聊；
+   - 消息确认：增加 ACK 机制，确保消息送达。
+
+2. **稳定性/安全性优化**
+   - 增加连接鉴权、限流（如基于 IP/用户的频率限制）；
+   - 完善错误处理：向客户端返回标准化错误信息，增加重试逻辑；
+   - 优化跨域配置：生产环境指定允许的域名，而非全放行；
+   - 支持长消息分片：拆分超过 512 字节的消息，接收端重组；
+   - 增加监控/日志：记录连接数、消息量、错误日志，便于排查问题。
+
+3. **代码重构**
+   - 移除冗余代码（如 `Index.Read` 中未生效的逻辑）；
+   - 优化 `hub` 中的遍历打印逻辑，仅在 debug 模式开启；
+   - 增加优雅关闭逻辑，服务停止时主动断开所有客户端并发送通知；
+   - 封装消息结构体，统一消息格式（如消息类型、发送者、时间戳、内容等）。
+
+人机验证（capjs）
+目前老唐的验证码接入了腾讯云、极验等第三方验证码平台，但我一直觉得还是越简单粗暴越好，然后就看到了类似POW(proof of work)的验证方式，相当于就是用js在浏览器里让你使用你的性能来计算challenge。
+
+开源里做的最好的就是capjs和altcha，因为capjs的体积更小，我选择了前者，我在中间件中增加了验证的一层，然后我在一些关键位置设置了强制调起capjs的人机验证，比方说短信、手机获取验证码，其他的业务场景根据频繁出现错误码的情况，触发阈值才显示人机验证。
+
+
+视频播放器(plyr)
